--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,19 @@
-body {
-    background-color: darksalmon;
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    height: auto;
+    border-radius: 10px;
+    place-items: center;
+}
+
+form span {
+    display:block;
+    margin: 20px 0;
+}
+
+button, input, select, textarea {
+    font-family: inherit;
+    font-size: 10%;
 }
